# playbase

./: .env  .env.dev  .gitignore  AUTHORS.md  MANIFEST.in  Makefile  README.md  dev.yml  docker-compose-non-used.yml  docker-compose.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  tailwind.config.js  yadjangoblog.yml
ansible/: ansible.cfg  deployment  site.yml  webservers.yml
ansible/env_vars/: base.yml  deployment.yml
components/nested/vcalendar/: vcalendar.py
components/todo/: todo.py
components/vcalendar/: vcalendar.html  vcalendar.py
compose/app/: Dockerfile
compose/django/: Dockerfile  Dockerfile-dev  Dockerfile-dev-base  entrypoint.sh  gunicorn.sh  sources.list
compose/elasticsearch/: Dockerfile  Dockerfile-dev
compose/nginx/: nginx.conf
compose/postgres/: Dockerfile  Dockerfile-dev  Dockerfile-dev-postgis  docker_postgres_init.sql  initdb-postgis.sh  sources.list
compose/redis/: Dockerfile-dev
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  make.bat  make_pdf.sh
docs/exts/: smallseg.py  zh.py
docs/source/: aboutme.md  conf.py  copyright.md  deploy.md  index.rst  installation.md  overview.md  tests.md
hexo-posts/: 20150418ShellCheatSheet.md  20160402MacRemoteControl.md  20160415MacPythonMonitorPart1.md  20160701MacCheatSheet.md  20160715MacPythonMonitorPart2.md  20160912MySQLCheatSheet.md  20161005UbuntuCheatSheet.md  20161209MongoCheatSheet.md  20161210CheatSheet.md  20161211RedisCheatSheet.md  20170105PostgreSQLCheatSheet.md  20170406FullStackDjangoDevOpsCheatsheet.md  20170527VSCodeCheatSheet.md  20170603PandasCheatSheet.md  20170615GitCheatSheet.md  20170623VimCheatSheet.md  20170726ReactCheatSheet.md  20180203NumpyCheatSheet.md  20180210DockerCheatSheet.md  20180210ElasticSearchCheatSheet.md
mipha/: celery.py  cli.py  globals.py  pre_settings.py  settings.py  settings_plus.py  signals.py  tasks.py  urls.py  views.py  wsgi.py
mipha/admin/: __init__.py
mipha/apps/user/: urls.py
mipha/commands/: import_hexo_source.py
mipha/contrib/comments/: models.py
mipha/contrib/rest_framework_oauth2_cn/: oauth2auth.py
mipha/management/commands/: import_hexo_source.py
mipha/migrations/: 0001_initial.py
mipha/models/: account.py  blog.py
mipha/services/: common.py
mipha/settings/: base.py  local.py  production.py  test.py
mipha/utils/: sys_info.py
playbase/: celery.py  cli.py  pre_settings.py  settings.py  signals.py  views.py  wsgi.py
playbase/admin/: __init__.py
playbase/apps/: urls.py
playbase/apps/dashboard/: urls.py  views.py
playbase/apps/home/: __init__.py  views.py
playbase/apps/user/: pagenations.py  urls.py
playbase/migrations/: 0001_initial.py
playbase/models/: __init__.py  account.py  base.py  blog.py  util.py
playbase/models_elastic/: models4es.py
playbase/services/: common.py
playbase/static/css/: main.css  mvp.css  tailwind.css
playbase/templates/: 403_csrf.html  404.html  500.html
playbase/templates/components/: article-card.html  footer.html  header.html  login.html  search_modal.html
playbase/templates/layout/: _base.html  _dashboard.html  _default.html
playbase/templates/mail/: password_forget.html  welcome.html
playbase/templates/pages/: index.html  login.html  p.html
playbase/templates/partial/: dt_htxm.html
playbase/templatetags/: active_link.py  use_icon.py
requirements/: base.txt  local.txt  production.txt  test.txt
static/css/: tailwind.css
tests/: conftest.py  test_basics.py
tests/yadjangoblog/yablog/: test_models4es.py
yadjangoblog/contrib/comments/: models.py
yadjangoblog/templates/: base.html  index.html
yadjangoblog/yaaccounts/: apps.py  models.py
yadjangoblog/yaadmin/: apps.py  tasks.py
yadjangoblog/yaapi/: apps.py  pagenations.py  urls.py
yadjangoblog/yablog/: admin.py  apps.py  client4es.py  models.py  models4es.py  signals.py
yadjangoblog/yacommon/: apps.py  models.py  views.py
yadjangoblog/yataskapp/: apps.py  celery.py
(+53 files in other folders)
