[tool.poetry]
name = "playbase"
version = "0.1.0"
description = ""
authors = [
  "twocucao <twocucao@gmail.com>",
]
include = ["playbase/templates/", "playbase/static/"]

[[tool.poetry.source]]
name = "tencent"
url = 'https://mirrors.cloud.tencent.com/pypi/simple'
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
asgiref = "^3.6.0"
attrs = "^22.2.0"
celery = "^5.2.7"
devtools = "^0.10.0"
dj-database-url = "^2.1.0"
django = "^5.0.3"
django-components = "^0.61"
django-compressor = "^4.4"
django-cors-headers = "^4.3.1"
django-debug-toolbar = "^4.2.0"
django-htmx = "^1.17.3"
django-tailwind = { extras = ["reload"], version = "^3.8.0" }
djangoql = "^0.18.1"
fabric = "^3.0.1"
gunicorn = "^21.2.0"
httptools = "^0.5.0"
invoke = "^2.2.0"
ipython = "^8.11.0"
jinja2 = "^3.1.2"
markdown = "^3.5.2"
nanoid = "^2.0.0"
openai = "^1.8.0"
openpyxl = "^3.1.2"
orjson = "^3.8.7"
pandas = "^1.5.3"
passlib = "^1.7.4"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.5"
pycryptodome = "^3.17"
pydantic-settings = "^2.1.0"
pyjwt = "^2.6.0"
pypinyin = "^0.48.0"
python-crontab = "^2.7.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-json-logger = "^2.0.7"
python-slugify = "^8.0.1"
qcloud-python-sts = "^3.1.3"
qrcode = "^7.4.2"
raven = "^6.10.0"
redis = "^4.5.1"
requests = "^2.28.2"
responses = "^0.23.1"
rich = "^13.3.2"
rsa = "^4.9"
ruff = "^0.1.13"
sendgrid = "^6.9.7"
sentry-sdk = "^1.16.0"
tenacity = "^8.2.2"
twilio = "^7.16.5"
uvicorn = "^0.21.0"
uvloop = "^0.17.0"
werkzeug = "^2.2.3"
xlrd = "^2.0.1"
xlsxwriter = "^3.0.9"
xlwt = "^1.3.0"
django-extensions = "^3.2.3"
pydantic-core = "^2.18.2"
annotated-types = "^0.6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
django-stubs = "^4.2.7"
fabric = "^3.0.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-celery = "^0.0.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-django-queries = "^1.2.0"
pytest-html = "^3.2.0"
pytest-mock = "^3.10.0"
types-pkg-resources = "^0.1.3"
types-python-dateutil = "^2.8.19.10"
types-pytz = "^2022.7.1.2"
types-requests = "^2.28.11.15"

[tool.poetry.scripts]
djcli = 'playbase.cli:main'

[tool.black]
target-version = ['py311']
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .cached
)/
'''


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

